<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="55dp"
    android:layout_gravity="bottom"
    android:background="@color/gray"
    android:id="@+id/pingXiXi">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/nav_bottom1">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/tbl_home"
            android:id="@+id/img_nav_home" />
        <TextView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:text="@string/menu_home"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/nav_bottom2">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/tbl_living"
            android:id="@+id/img_nav_living" />
        <TextView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:text="@string/menu_living"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/nav_bottom3">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/tbl_classify"
            android:id="@+id/img_nav_classify" />
        <TextView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:text="@string/menu_classify"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/nav_bottom4">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/tbl_comment"
            android:id="@+id/img_nav_comment" />
        <TextView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:text="@string/menu_comment"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_weight="1"
        android:orientation="vertical"
        android:id="@+id/nav_bottom5">
        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/tbl_person"
            android:id="@+id/img_nav_person" />
        <TextView
            android:layout_width="64dp"
            android:layout_height="32dp"
            android:text="@string/menu_person"
            />
    </LinearLayout>

</LinearLayout>